# faiss-server

./: CMakeLists.txt  Makefile  README.md
example/: requirements.txt
example/client/: faiss_pb2.py  faiss_pb2_grpc.py
example/indexing/: indexing.py
src/: CMakeLists.txt  faiss_server.cpp  search.cpp
src/protobuf/: faiss.grpc.pb.cc  faiss.grpc.pb.h  faiss.pb.cc  faiss.pb.h
